# aves-caesar-desktop

./: .gitignore  LICENSE.txt  NOTICE.txt  README.md  model-version.json  package-lock.json  package.json  pyproject.toml  requirements-cpu.txt  requirements-windows.txt  runtime_config.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
backend/: run_bird_desktop.py
backend/bird_desktop/: api.py  main.py  prediction_worker.py
frontend/: index.html
frontend/src/: app.ts  backendApiClient.ts  eventBindingRegistry.ts  icons.ts  main.ts  types.ts  utils.ts
installer/windows/: AvesCaesar.iss
licenses/: DATA-SOURCES-NOTICE.txt  THIRD-PARTY-NOTICES.txt
scripts/dev/: run.ps1  run.py
scripts/models/: download_release_models.py  export_detector.py  sanitize_onnx.py  write_default_config.py
scripts/packaging/: build_installer.py  package.py  pyinstaller_onnxruntime_runtime_hook.py  write_release_manifest.py
scripts/setup/: install_exiftool.py
tests/: test_cache_cleaning.py  test_collection_services.py  test_frontend_i18n.py  test_gpx.py  test_image_io.py  test_inference_pipeline.py  test_lightroom_services.py  test_log_files.py  test_manual_corrections.py  test_model_metadata.py  test_model_release_downloader.py  test_organization_services.py  test_package.py  test_prediction_cache.py  test_prediction_result_filter.py  test_prediction_service_cache.py  test_release_manifest.py  test_runtime_cache.py  test_runtime_config.py  test_runtime_paths.py  test_runtime_settings.py  test_species_labels.py  test_updates.py  test_worker_process.py
(+91 files in other folders)
